# dashboard-organicos

./: README.md  dashboard.py  notebook_apoio.ipynb  pyproject.toml
api/: data_import.py
data/input/: cadastro_produtores.xlsx  cadastro_produtores.xlsxcadastro_produtores.xlsx
data/raw/: cadastro_produtores.xlsx
data_processing/: data_processor.py
db_operations/: database.py
notebooks/: analysis_exploratory.ipynb
src/: app.py  data_import.py  data_processor.py
streamlit/: app.py
