[tool.poetry]
name = "dashboard"
version = "0.1.0"
description = ""
authors = ["luizantoniont <luizzantonioneto@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.2"
streamlit = "^1.36.0"
openpyxl = "^3.1.5"
matplotlib = "^3.9.1"
plotly = "5.23.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.packages]
include = [
    { include = "src" }
]